--- a/gomimon/templates/gomimon/gomimon.html
+++ b/gomimon/templates/gomimon/gomimon.html
@@ -30,7 +30,7 @@
             </div>
             <div class="gomimon-name">{{ user_gomimon.gomimon_name }}</div>
             <div class="gomimon-level">Lv. 1</div>
-            <a href = "{% url 'start_battle' %}">テスト戦闘</a>
+            <!-- <a href = "{% url 'start_battle' %}">テスト戦闘</a> -->
             <div class="status-text">HP</div>
             <div class="status-bar">
                 <div class="status-bar-fill" style="width: {{ hp_percentage }}%;"></div>
