--- a/gomimon/templates/registration/user_profile.html
+++ b/gomimon/templates/registration/user_profile.html
@@ -241,7 +241,7 @@
                   <p>まだゴミを回収していません。</p>
               {% endfor %}
           {% else %}
-              <p>回収ログの取得に失敗しました。</p>
+              <p>まだゴミを回収していません。</p>
           {% endif %}
       </div>
 
