--- a/gomimon/templates/gomimon/map.html
+++ b/gomimon/templates/gomimon/map.html
@@ -117,6 +117,10 @@
         </form>
         <div id="message-container"></div>
         <div id="errors-container"></div>
+        <div id="image-popup-overlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color: rgba(0,0,0,0.8); justify-content:center; align-items:center; z-index:9999;">
+            <img id="popup-image" style="max-width:90%; max-height:90%; border-radius:12px;">
+        </div>
+          
     </div>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" crossorigin=""></script>
