--- a/gomimon/templates/gomimon/map.html
+++ b/gomimon/templates/gomimon/map.html
@@ -115,6 +115,9 @@
             <input type="hidden" name="longitude" id="longitudeInput">
             <button type="submit" class="save btn btn-default">投稿</button>
         </form>
+        <div id="uploading-message" style="display:none; color:#007bff; margin-top:10px;">
+            アップロード中です…お待ちください。
+        </div>
         <div id="message-container"></div>
         <div id="errors-container"></div>
         <div id="image-popup-overlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color: rgba(0,0,0,0.8); justify-content:center; align-items:center; z-index:9999;">
