--- a/gomimon/static/css/map.css
+++ b/gomimon/static/css/map.css
@@ -154,5 +154,20 @@ div > div > .poisute img {
     }
 }
 
-
+#uploading-message {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(255, 255, 255, 0.95);
+    padding: 20px 40px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    font-weight: bold;
+    font-size: 1.2em;
+    color: #007bff;
+    text-align: center;
+    z-index: 9999;
+  }
+  
 
