--- a/gomimon/templates/gomimon/battle_log.html
+++ b/gomimon/templates/gomimon/battle_log.html
@@ -130,7 +130,7 @@
     </div>
     <div class="monster-section">
         <div class="monster-image-container" id="monster2-image-container">
-            <img id="monster2-image" src="{% static 'img/' %}{{battle_state.monster2_img}}" alt="{{ battle_state.monster2_name }}" class="monster-image">
+            <img id="monster2-image" src="{{battle_state.monster2_img}}" alt="{{ battle_state.monster2_name }}" class="monster-image">
         </div>
         <div class="hp-bar"><div id="hp-monster2" class="hp-fill" style="background-color: #4caf50;"></div></div>
     </div>
